Add X-UI panel to package
- Include X-UI v1.8.12 binaries
- Include Xray core and geo databases
- Update installer to use local X-UI instead of downloading
- Complete offline installation capability

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ logs/
 *.sqlite
 *.sqlite3
 
+# Large binary files (X-UI binaries are included in repo)
+# Uncomment if you want to exclude them:
+# x-ui/x-ui
+# x-ui/bin/xray-linux-amd64
+
 # SSL Certificates (sensitive)
 *.pem
 *.key
